--- a/Smashtag/Base.lproj/Main.storyboard
+++ b/Smashtag/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                 <rect key="frame" x="0.0" y="58" width="375" height="96"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Thu-8z-apg" id="ySp-Gq-G1s">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="95.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="95"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="zhL-rJ-Br9">
@@ -96,11 +96,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="RBo-Ax-QEy">
-                        <barButtonItem key="rightBarButtonItem" title="Tweeters" id="7vr-N6-stN">
-                            <connections>
-                                <segue destination="ARy-2F-Nw6" kind="show" identifier="Tweeters Mentioning Search Term" id="ltc-C7-1nJ"/>
-                            </connections>
-                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweeters" id="7vr-N6-stN"/>
                     </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="YXR-lX-bun">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
@@ -135,7 +131,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <segue destination="qGf-I8-8L8" kind="show" identifier="Search History" id="2xE-9C-XGv"/>
-                                    <segue destination="ARy-2F-Nw6" kind="show" trigger="accessoryAction" id="ng3-Dp-vdM"/>
+                                    <segue destination="ARy-2F-Nw6" kind="show" identifier="Popular Mentions" trigger="accessoryAction" id="0sy-am-L5y"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -186,7 +182,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PvQ-XK-Pdj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1444" y="644.52773613193403"/>
+            <point key="canvasLocation" x="2561" y="645"/>
         </scene>
         <!--Smash Tweeters Table View Controller-->
         <scene sceneID="LNz-zO-Xh4">
@@ -197,7 +193,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TwitterUser Cell" textLabel="BWr-AW-Qoi" detailTextLabel="iTc-cF-V3M" style="IBUITableViewCellStyleSubtitle" id="gcF-u2-CDo">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PopularMention Cell" textLabel="BWr-AW-Qoi" detailTextLabel="iTc-cF-V3M" style="IBUITableViewCellStyleSubtitle" id="gcF-u2-CDo">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gcF-u2-CDo" id="KGA-JM-afJ">
@@ -220,6 +216,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="qGf-I8-8L8" kind="show" id="oA6-LU-Sil"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -230,7 +229,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ftc-Eo-I6h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1273" y="-898"/>
+            <point key="canvasLocation" x="1556" y="645"/>
         </scene>
         <!--Mentions Table View Controller-->
         <scene sceneID="DqF-0R-oYt">
@@ -245,7 +244,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="81"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ccM-Sw-ayr" id="jWJ-Ws-Ggv">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="80.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -256,11 +255,11 @@
                                 <rect key="frame" x="0.0" y="109" width="375" height="186"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Sgz-EQ-ANU" id="qxY-1v-Gfk">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="185.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="185"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Gc-vB-isU">
-                                            <rect key="frame" x="8" y="8" width="359" height="169.5"/>
+                                            <rect key="frame" x="8" y="8" width="359" height="170"/>
                                         </imageView>
                                     </subviews>
                                     <constraints>
@@ -292,9 +291,10 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GYt-j0-pem" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" systemItem="search" id="h7W-Dv-bwP"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="mCG-OG-1VU">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mCG-OG-1VU">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -311,9 +311,9 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gUi-v9-vrl" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" systemItem="history" id="nuO-ey-nYD"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="fqE-kr-gP1">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fqE-kr-gP1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -345,7 +345,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="2xE-9C-XGv"/>
-        <segue reference="ng3-Dp-vdM"/>
+        <segue reference="J6q-Oi-soo"/>
     </inferredMetricsTieBreakers>
 </document>
